# b2b

ai/aider/: Dockerfile  dev_container.sh
ai/cloi/: Dockerfile  dev_container.sh
ai/comfyui/: Dockerfile  dev_container.sh  entrypoint.sh  post_build.sh  pre_build.sh
ai/langchain/: Dockerfile  dev_container.sh  pyproject.toml
ai/ollama/: Dockerfile  dev_container.sh
ai/opendevin/: Dockerfile  dev_container.sh
ai/playwright/: Dockerfile  codegen.sh  dev_container.sh  package.json  pnpm-lock.yaml
ai/windsurf/: Dockerfile  dev_container.sh
apps/bruno/: Dockerfile  dev_container.sh
apps/catai/: Dockerfile  dev_container.sh  start_catai.sh
apps/cpp/: Dockerfile  dev_container.sh
apps/crawler/: Dockerfile  dev_container.sh
apps/electron/: Dockerfile  dev_container.sh
apps/electron-react-starter/: Dockerfile  dev_container.sh
apps/electron-starter/: Readme  dev_container.sh  index.html  main.js  package-lock.json  package.json
apps/gcp/: Dockerfile
apps/go1.12/: Dockerfile
apps/go1.8/: Dockerfile
apps/golang/: Dockerfile  dev_container.sh
apps/hugo/: Dockerfile  dev_container.sh
apps/jupyter/: Dockerfile  dev_container.sh
apps/librewolf/: Dockerfile  dev_container.sh
apps/lua51/: Dockerfile
apps/mermaid/: Dockerfile  Makefile  dev_container.sh
apps/mongoose/: Dockerfile  Makefile  dev_container.sh  runws.sh
apps/nextjs/: Dockerfile  dev_container.sh  startapp.sh
apps/react/: Dockerfile
apps/react-native/: Dockerfile
apps/rust/: Dockerfile  dev_container.sh
apps/tauri-react-starter/: Dockerfile  dev_container.sh
(+71 files in other folders)
