[tool.poetry]
name = "langchain-app"
version = "0.1.0"
description = "LangChain + LangGraph in a container"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"

# ✅ Compatible versions
langchain = "^0.1.16"
langgraph = "^0.0.39"

# ✅ Optional but commonly used
openai = "^1.30.1"
tiktoken = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

